<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ganeshnomula.food.EditInfo">

    <TextView
        android:id="@+id/vendorDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VendorDashboardTitle"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:id="@+id/vendorCredentialsLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/vendorPhonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phonenum"
            android:inputType="phone"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/vendorEdtFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Fullname"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/vendorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/vendorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EMail"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            />


    </LinearLayout>

    <Button
        android:background="@drawable/button"
        android:id="@+id/btnUpdate"
        android:text="@string/Update"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
