<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ganeshnomula.food.UpdateLocation">

    <TextView
        android:id="@+id/updateLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UpdateLocationTitle"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:id="@+id/vendorCredentialsLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/vendorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LocationDetails"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            />

    </LinearLayout>

    <Button
        android:background="@drawable/button"
        android:id="@+id/btnUpdate"
        android:text="@string/Update"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
