<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ganeshnomula.food.SignIn">

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignInTitle"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:id="@+id/credentialsLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phonenum"
            android:inputType="phone"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            />

        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:id="@+id/edtUsername"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Username"-->
            <!--android:inputType="text"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_maxCharacters="11"-->
            <!--app:met_primaryColor="@color/colorAccent"-->
            <!--app:met_singleLineEllipsis="true"-->
            <!--app:met_baseColor="@color/colorAccent"-->
        <!--/>-->

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"
            />

    </LinearLayout>

    <Button
        android:background="@drawable/button"
        android:id="@+id/btnSignIn"
        android:text="@string/SignIn"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
